adding auth controller

--- a/task-manager-backend/src/main/resources/application.properties
+++ b/task-manager-backend/src/main/resources/application.properties
@@ -30,8 +30,8 @@ quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.P
 # SmallRye JWT Configuration
 
 # DESARROLLO: Keys locales (fuera del proyecto)
-%dev.mp.jwt.verify.publickey.location=${JWT_PUBLIC_KEY_PATH:file:///dev/publicKey.pem}
-%dev.smallrye.jwt.sign.key.location=${JWT_PRIVATE_KEY_PATH:file:///dev/privateKey.pem}
+%dev.mp.jwt.verify.publickey.location=${JWT_PUBLIC_KEY_PATH:file:/Users/surrender/Proyectos/task-manager/dev/publicKey.pem}
+%dev.smallrye.jwt.sign.key.location=${JWT_PRIVATE_KEY_PATH:file:/Users/surrender/Proyectos/task-manager/dev/privateKey.pem}
 
 # TESTING: Keys temporales para tests
 %test.mp.jwt.verify.publickey.location=${JWT_PUBLIC_KEY_PATH:file:///tmp/test-keys/publicKey.pem}
@@ -43,8 +43,6 @@ quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.P
 
 # JWT Issuer y configuración común
 mp.jwt.verify.issuer=https://task-manager.com
-
-# JWT Custom Properties
 jwt.expiration.time=3600
 
 # =====================================
