updating readme file

--- a/task-manager-backend/src/main/resources/application.properties
+++ b/task-manager-backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=${USER_BD:root}
 quarkus.datasource.password=${PASSWORD_BD:root}
-quarkus.datasource.jdbc.url=jdbc:mysql://${HOST_BD:localhost}:${PORT_BD:3306}/${NAME_BD:tmdb}
+quarkus.datasource.jdbc.url=${DATASOURCE_BD:jdbc:mysql://localhost:3306/tmdb}
 quarkus.datasource.jdbc.max-size=16
 
 # =====================================
@@ -34,8 +34,8 @@ quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.P
 %dev.smallrye.jwt.sign.key.location=${JWT_PRIVATE_KEY_PATH:file:/Users/surrender/Proyectos/task-manager/dev/privateKey.pem}
 
 # TESTING: Keys temporales para tests
-%test.mp.jwt.verify.publickey.location=${JWT_PUBLIC_KEY_PATH:file:///tmp/test-keys/publicKey.pem}
-%test.smallrye.jwt.sign.key.location=${JWT_PRIVATE_KEY_PATH:file:///tmp/test-keys/privateKey.pem}
+%test.mp.jwt.verify.publickey.location=${JWT_PUBLIC_KEY_PATH:file:/Users/surrender/Proyectos/task-manager/dev/publicKey.pem}
+%test.smallrye.jwt.sign.key.location=${JWT_PRIVATE_KEY_PATH:file:/Users/surrender/Proyectos/task-manager/dev/privateKey.pem}
 
 # PRODUCCIÓN: Keys desde variables de entorno (OBLIGATORIO)
 %prod.mp.jwt.verify.publickey.location=${JWT_PUBLIC_KEY_PATH}
