--- a/task-manager-backend/src/main/resources/application.properties
+++ b/task-manager-backend/src/main/resources/application.properties
@@ -71,6 +71,21 @@ mp.openapi.extensions.smallrye.info.description=Sistema de gestión de tareas
 # =====================================
 # LOGGING (OPCIONAL)
 # =====================================
-# Solo mostrar logs SQL en desarrollo
+# Configuración de logs en consola
 %dev.quarkus.log.console.level=DEBUG
 %prod.quarkus.log.console.level=INFO
+
+# Configuración de logs en archivo
+quarkus.log.file.enable=true
+quarkus.log.file.path=${APP_PATH:.}/logs/app.log
+quarkus.log.file.level=INFO
+quarkus.log.file.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n
+
+# Configuración de rotación de archivos de log
+quarkus.log.file.rotation.max-file-size=10M
+quarkus.log.file.rotation.max-backup-index=5
+
+# Logs específicos por ambiente
+%dev.quarkus.log.file.level=DEBUG
+%test.quarkus.log.file.enable=false
+%prod.quarkus.log.file.level=INFO
