--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,8 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+# Exclude entire .mvn directory (Maven Wrapper)
+.mvn/
 
 # Eclipse m2e generated files
 # Eclipse Core
