--- a/task-manager-backend/docker/Dockerfile.native-micro
+++ b/task-manager-backend/docker/Dockerfile.native-micro
@@ -6,7 +6,7 @@
 #
 # Before building the container image run:
 #
-# ./mvnw package -Dnative -Dquarkus.native.container-build=true
+# mvn package -Dnative -Dquarkus.native.container-build=true
 #
 # Then, build the image with:
 #
