--- a/task-manager-frontend/angular.json
+++ b/task-manager-frontend/angular.json
@@ -25,8 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "src/custom-theme.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
